build_log_12.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/main.cpp.o
[ 20%] Building CXX object CMakeFiles/sisterapp.dir/src/core/application.cpp.o
[ 23%] Building CXX object CMakeFiles/sisterapp.dir/src/core/preferences.cpp.o
[ 25%] Building CXX object CMakeFiles/sisterapp.dir/src/graphics/camera.cpp.o
[ 27%] Building CXX object CMakeFiles/sisterapp.dir/src/graphics/geometry_utils.cpp.o
[ 30%] Building CXX object CMakeFiles/sisterapp.dir/src/graphics/material.cpp.o
[ 32%] Building CXX object CMakeFiles/sisterapp.dir/src/graphics/mesh.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp: In constructor ‘graphics::Mesh::Mesh(const core::GraphicsContext&, const std::vector<graphics::Vertex>&, const std::vector<short unsigned int>&)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:49:12: error: expected primary-expression before ‘const’
   49 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint16_t>& indices)
      |            ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:49:50: error: expected primary-expression before ‘const’
   49 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint16_t>& indices)
      |                                                  ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:49:87: error: expected primary-expression before ‘const’
   49 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint16_t>& indices)
      |                                                                                       ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:49:123: error: cannot call constructor ‘graphics::Mesh::Mesh’ directly [-fpermissive]
   49 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint16_t>& indices)
      |                                                                                                                           ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:49:123: note: for a function-style cast, remove the redundant ‘::Mesh’
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:71:12: error: expected primary-expression before ‘const’
   71 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint32_t>& indices)
      |            ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:71:50: error: expected primary-expression before ‘const’
   71 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint32_t>& indices)
      |                                                  ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:71:87: error: expected primary-expression before ‘const’
   71 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint32_t>& indices)
      |                                                                                       ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:71:123: error: cannot call constructor ‘graphics::Mesh::Mesh’ directly [-fpermissive]
   71 | Mesh::Mesh(const core::GraphicsContext& context, const std::vector<Vertex>& vertices, const std::vector<uint32_t>& indices)
      |                                                                                                                           ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:71:123: note: for a function-style cast, remove the redundant ‘::Mesh’
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:93:16: error: qualified-id in declaration before ‘(’ token
   93 | void Mesh::draw(VkCommandBuffer cmd) const {
      |                ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp: At global scope:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:102:2: error: expected ‘}’ at end of input
  102 | } // namespace graphics
      |  ^
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/graphics/mesh.cpp:3:20: note: to match this ‘{’
    3 | namespace graphics {
      |                    ^
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:289: CMakeFiles/sisterapp.dir/src/graphics/mesh.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
